[gd_scene load_steps=8 format=3 uid="uid://bqctvf6ji3ahv"]

[ext_resource type="Shader" uid="uid://bduug1bfy0mt8" path="res://scripts/shader/weapon_shader.gdshader" id="1_iyg5g"]
[ext_resource type="Script" uid="uid://bw7hcvua475dl" path="res://scripts/weapon/weapon.gd" id="1_lopa8"]
[ext_resource type="Texture2D" uid="uid://co6qncct5weal" path="res://assets/heroes/knight/weapon_sword_1.png" id="2_lopa8"]
[ext_resource type="Script" uid="uid://bpbcuy66iyp78" path="res://scripts/hit_box.gd" id="3_ylpk0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ypwvo"]
resource_local_to_scene = true
shader = ExtResource("1_iyg5g")
shader_parameter/active = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xmlwb"]
radius = 3.99999
height = 20.0001

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_23vfj"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 40.0
angular_velocity_min = 107.59
angular_velocity_max = 248.28
orbit_velocity_min = 9.49949e-08
orbit_velocity_max = 9.49949e-08
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
tangential_accel_min = 14.94
tangential_accel_max = 59.77

[node name="Weapon" type="Node2D"]
script = ExtResource("1_lopa8")

[node name="Node2D" type="Node2D" parent="."]
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
material = SubResource("ShaderMaterial_ypwvo")
position = Vector2(7, 3)
rotation = -0.785398
texture = ExtResource("2_lopa8")
offset = Vector2(5, -4)

[node name="HitBox" type="Area2D" parent="Node2D/Sprite2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("3_ylpk0")
metadata/_custom_type_script = "uid://bpbcuy66iyp78"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Sprite2D/HitBox"]
position = Vector2(4.94976, -3.53552)
rotation = 0.785398
shape = SubResource("CapsuleShape2D_xmlwb")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Node2D/Sprite2D"]
position = Vector2(4.94976, -3.53552)
emitting = false
lifetime = 0.6
process_material = SubResource("ParticleProcessMaterial_23vfj")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PickUpCoolTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
